[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulseboard"
version = "0.9.0"
description = "A personal uptime monitor and service dashboard CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jason Crabtree" }]
dependencies = [
    "click>=8.1",
    "cryptography>=42.0",
    "dnspython>=2.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.7",
    "textual>=0.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
pulseboard = "pulseboard.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
